crates/agglayer-jsonrpc-api/src/tests/snapshots/agglayer_jsonrpc_api__tests__get_latest_known_certificate_header__get_latest_known_certificate_header__no_certificate_header.snap
---
source: crates/agglayer-jsonrpc-api/src/tests/get_latest_known_certificate_header.rs
expression: json
snapshot_kind: text
---
{
  "id": 0,
  "jsonrpc": "2.0",
  "result": null
}
