crates/agglayer-jsonrpc-api/src/tests/snapshots/agglayer_jsonrpc_api__tests__get_latest_known_certificate_header__get_latest_known_certificate_header__settled_at_same_height.snap
---
source: crates/agglayer-jsonrpc-api/src/tests/get_latest_known_certificate_header.rs
expression: json
---
{
  "id": 0,
  "jsonrpc": "2.0",
  "result": {
    "certificate_id": "0x17af59ca4897343af81740b7c7c7f464c1a246e097bc1d224783e85057205a53",
    "certificate_index": null,
    "epoch_number": null,
    "height": 10,
    "metadata": "0x0000000000000000000000000000000000000000000000000000000000000000",
    "network_id": 1,
    "new_local_exit_root": "0x27ae5ba08d7291c96c8cbddcc148bf48a6d68c7974b94356f53754ef6171d757",
    "prev_local_exit_root": "0x27ae5ba08d7291c96c8cbddcc148bf48a6d68c7974b94356f53754ef6171d757",
    "settlement_job_id": null,
    "settlement_tx_hash": null,
    "status": "Settled"
  }
}
